@@ -124,7 +124,7 @@ public class RobotDAOServiceImpl extends AuditableDAOService<Robot, RobotAuditTr
 		final var result = query.fetch();
 		var total = 0;
 		if(result.size() > 0) {
-			total = result.get(0).getValue("total", Integer.class);
+			total = result.getFirst().getValue("total", Integer.class);
 		}
 
 		final var robots = result.into(Robot.class);
