@@ -565,7 +565,7 @@ public class ScopeDAOServiceImpl extends AuditableDAOService<Scope, ScopeAuditTr
 		final var result = query.fetch();
 		var total = 0;
 		if(result.size() > 0) {
-			total = result.get(0).getValue("total", Integer.class);
+			total = result.getFirst().getValue("total", Integer.class);
 		}
 
 		final var scopes = result.into(Scope.class);
