@@ -188,7 +188,7 @@ public class UserDAOServiceImpl extends AuditableDAOService<User, UserAuditTrail
 		final var result = query.fetch();
 		var total = 0;
 		if(result.size() > 0) {
-			total = result.get(0).getValue("total", Integer.class);
+			total = result.getFirst().getValue("total", Integer.class);
 		}
 
 		final var users = result.into(User.class);
