@@ -261,7 +261,7 @@ public class WorkflowStatusDAOServiceImpl extends AuditableDAOService<WorkflowSt
 		final var result = query.fetch();
 		var total = 0;
 		if(result.size() > 0) {
-			total = result.get(0).getValue("total", Integer.class);
+			total = result.getFirst().getValue("total", Integer.class);
 		}
 
 		final var workflowStatuses = result.into(WorkflowStatus.class);
